--- a/analyzeDataSet.ipynb
+++ b/analyzeDataSet.ipynb
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a5991a9",
+   "id": "3c96a49c",
    "metadata": {},
    "source": [
     "Create model"
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b9c921b7",
+   "id": "2d988629",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41452297",
+   "id": "1c3d4ef6",
    "metadata": {},
    "source": [
     "Train model"
@@ -1048,9 +1048,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2853f073",
+   "metadata": {},
+   "source": [
+    "## Evaluating metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a5e3f29",
+   "metadata": {},
+   "source": [
+    "Plotting loss and accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c4bcf138",
+   "id": "3b6e1940",
    "metadata": {},
    "outputs": [
     {
@@ -1103,6 +1119,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86dd3721",
+   "metadata": {},
+   "source": [
+    "Evaluating model and predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "30d1cd7a",
@@ -1146,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1ce0c933",
+   "id": "42250511",
    "metadata": {},
    "outputs": [
     {
@@ -1217,6 +1241,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9c4a2ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "id": "87426999",
    "metadata": {},
@@ -1239,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d9e21db",
+   "id": "8ae86b85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6d45f68",
+   "id": "1f7c53c1",
    "metadata": {},
    "outputs": [],
    "source": []
